--- a/index.html
+++ b/index.html
@@ -1,1 +1,346 @@
+<!DOCTYPE/Users/francoispapin/Sites/Site1 xthml en cours/index.txt
+ html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+ "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+<html>
+
+	
+	
+	<head>
+	<title>Homepage &#124; NPEi.lab</title>
+	<meta name="author" content="Fran&ccedil;ois Papin" />
+	<meta http-equiv="Content-Language" content="en" />
+	<meta name="keywords" lang="en" content="psychology, psychologist, cognition, cognitive" />
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" /> 
+	<link rel="stylesheet" href="text/mystyle.css" media="screen" type="text/css" />
+	<link rel="stylesheet" href="text/fontawesome.min.css" />
+		
+<style>
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #F8F8FF;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: black;
+    text-align: left;
+    padding: 14px 8px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #FFFFFF;
+}
+
+.active {
+    background-color: #F8F8FF;
+}
+
+	
+</style>
+		
+</head>
+
+	
+	
+    <body>
+        <header>
+        </header>
+        <main>
+    
+<a name="top"></a>		
+
+<ul>
+  <li><a class="active" name="index">homepage</a></li>
+  <li><a href="competences.html">competences</a></li>
+  <li><a href="research.html">research</a></li>
+  <li><a href="publications.html">publications</a></li>
+  <li><a href="education.html">education</a></li>
+  <li><a href="neuroscience.html">neuroscience</a></li>
+  <li><a href="psychology.html">psychology</a></li>
+  <li><a href="pedagogy.html">éducation</a></li>
+  <li><a href="citations.html">citations</a></li>
+  <li><a href="glossary.html">glossary</a></li>
+  <li><a href="links.html">links</a></li>
+  <li><a href="mailto:fpapin84@hotmail.com">contact</a></li>
+</ul>
+
+<BR>
+
+<TABLE border="0">
+<TR>
+
+		
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="research.html"><IMG SRC="images/symboles/icosA.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="research.html">Research</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+	
+		
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="publications.html"><IMG SRC="images/symboles/icosB.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="publications.html">Publications</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="competences.html"><IMG SRC="images/symboles/icosC.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="competences.html">Competences</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+		
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="education.html"><IMG SRC="images/symboles/icosD.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="education.html">Education</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+</TR>
+</TABLE>
+
+
+		aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+		
+<TABLE border="0">
+<TR>
+
+		
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="index.html"><IMG SRC="images/symboles/Logotypeone.jpeg" border="0" align="center" HEIGHT=300 WIDTH=300></A>
+	</figure>
+	</DIV>
+	</TD>
+		
+	
+		
+</TR>
+</TABLE>
+
+
+
+<DIV align="center">
+<A HREF="index.html"><IMG SRC="images/symboles/LogoLab_name_blackb.jpeg" border="0" align="center" HEIGHT=84 WIDTH=300></A>
+<BR><A HREF="index.html">Homepage</A>
+</DIV>
+	
+
+	
+	
+
+
+		
+		
+		
+		
+<TABLE border="0">
+<TR>
+	
+		
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	</figure>
+	</DIV>
+	</TD>
+	
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="neuroscience.html"><IMG SRC="images/symboles/icosO.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="neuroscience.html">Neuroscience</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+
+	
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="psychology.html"><IMG SRC="images/symboles/icosP.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="psychology.html">Psychology</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+		
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="pedagogy.html"><IMG SRC="images/symboles/icosQ.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="pedagogy.html">Éducation</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+		
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	</figure>
+	</DIV>
+	</TD>
+	
+</TR>
+</TABLE>
+
+	
+		
+		
+		
+		
+<TABLE border="0">
+<TR>
+	
+	
+		
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="citations.html"><IMG SRC="images/symboles/icosV.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="citations.html">Citations</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+			
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="glossary.html"><IMG SRC="images/symboles/icosW.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="glossary.html">Glossary</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+	
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="links.html"><IMG SRC="images/symboles/icosX.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="links.html">Links</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+	
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="mailto:fpapin84@hotmail.com"><IMG SRC="images/symboles/icosgotham.gif" border="0" align="center" HEIGHT=130 WIDTH=130></A>
+	<figcaption><BR><A HREF="mailto:fpapin84@hotmail.com">Contact</A></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+
+	
+
+	
+
+</TR>
+</TABLE>
+
+	
+		
+		
+		
+		
+
+		
+
+
+<TABLE border="0">
+<TR>
+	
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="index.html"><IMG SRC="images/symboles/LogoLab_name_blackb.jpeg" border="0" align="center" HEIGHT=84 WIDTH=300></A>
+	</figure>
+	</DIV>
+	</TD>
+		
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="index.html"><IMG SRC="images/symboles/geometric_sphere_vivante.gif" border="0" align="center" HEIGHT=150 WIDTH=150></A>
+	<figcaption><BR></figcaption>
+	</figure>
+	</DIV>
+	</TD>
+		
+	<TD width="10%">
+	<DIV align="center">
+	<figure>
+	<A HREF="index.html"><IMG SRC="images/symboles/LogoLab_name_list.jpeg" border="0" align="center" HEIGHT=300 WIDTH=300></A>
+	</figure>
+	</DIV>
+	</TD>
+			
+</TR>
+</TABLE>		
+		
+
+
+		
+<BR>
+	
+
+
+		
+		
+		
+		
+		
+        </main>
+        <footer>
+	
+	<hr>
+	
+		
+	<DIV align="center">Site : NPEi.lab</DIV>
+
+		<DIV align="center">
+		<div id="footer">
+		<jdoc:include type="modules" name="footer" style="raw" />
+ 		<div id="copyright">Copyright &copy; 2020 - <?php echo date('Y');?>
+		 Fran&ccedil;ois Papin &#124; All rights reserved.
+		</div>
+		</div>
+	</DIV>
+
+	<DIV align="center">Author : Fran&ccedil;ois Papin &#124; <a href="mailto:fpapin84@hotmail.com">contact</a></DIV>
+	<DIV align="center">Sitemap : <A HREF="https://francoispapin.github.io/NPEi.lab/" target="_blank">NPEi.lab</A></DIV>
+	<DIV align="center">License : <A HREF="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache 2.0</A></DIV>
+	<DIV align="center">Website hosting : <A HREF="https://github.com" target="_blank">Github, Inc.</A></DIV>	
+        
+		<BR>
+			
+
+	
+	</footer>
+    </body>
+</html>
 
